🚀 Release v1.0.2: Performance Improvements
- Tối ưu tốc độ chuyển đổi: ~0.967ms per address
- Throughput: 1034 addresses/second
- Initialization time: ~20ms
- Thêm PERFORMANCE.md guide
- Thêm performance testing scripts
- Cải thiện data indexing và caching
- 100% success rate với optimized memory usage

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vietnam-address-converter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Thư viện JavaScript/TypeScript để tự động chuyển đổi địa chỉ hành chính Việt Nam từ cũ sang mới theo Nghị quyết 202/2025/QH15",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
-  "homepage": "https://github.com/quangtam/vietnam-address-converter",
+  "homepage": "https://quangtam.github.io/vietnam-address-converter/",
   "repository": {
     "type": "git",
     "url": "https://github.com/quangtam/vietnam-address-converter.git"
