fix: Sửa lỗi Rollup native module trong GitHub Actions
- Thay đổi từ npm ci sang npm install để tránh bug optional dependencies
- Xóa package-lock.json và clear cache trước khi install
- Reinstall Rollup với --no-optional flag
- Thay đổi Node.js version từ 20 sang 18 cho tương thích tốt hơn
- Thêm fallback build method khi Rollup fail
- Thêm manual install @rollup/rollup-linux-x64-gnu nếu cần

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -34,10 +34,17 @@ jobs:
       - name: Install dependencies
         run: |
           if [ -f package-lock.json ]; then
-            npm ci
+            rm package-lock.json
+            npm cache clean --force
+            npm install
           else
             npm install
           fi
+
+      - name: Reinstall Rollup (fix native module issue)
+        run: |
+          npm uninstall rollup
+          npm install rollup --no-optional
 
       - name: Run linter
         run: npm run lint --if-present
@@ -46,7 +53,12 @@ jobs:
         run: npm test --if-present
 
       - name: Build library
-        run: npm run build
+        run: |
+          npm run build || {
+            echo "Rollup failed, trying alternative build method"
+            npm install --save-dev @rollup/rollup-linux-x64-gnu
+            npm run build
+          }
 
       - name: Test demo
         run: npm run demo --if-present
