--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,11 +28,18 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          rm -f package-lock.json
+          npm cache clean --force
+          npm install
+
+      - name: Reinstall Rollup (fix native module issue)
+        run: |
+          npm uninstall rollup
+          npm install rollup --no-optional
 
       - name: Run tests
         run: npm test
@@ -41,7 +48,12 @@ jobs:
         run: npm run lint
 
       - name: Build library
-        run: npm run build
+        run: |
+          npm run build || {
+            echo "Rollup failed, trying alternative build method"
+            npm install --save-dev @rollup/rollup-linux-x64-gnu
+            npm run build
+          }
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
