--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,5 @@
 {
   "root": true,
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "extends": [
-    "eslint:recommended"
-  ],
   "env": {
     "node": true,
     "es2020": true
@@ -14,7 +9,8 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "no-undef": "off"
   },
   "ignorePatterns": ["dist/", "node_modules/", "*.js", "src/__tests__/"]
 }
